--- a/.github/workflows/build-tag-push-to-dockerhub.yml
+++ b/.github/workflows/build-tag-push-to-dockerhub.yml
@@ -22,7 +22,7 @@ jobs:
       - name: aws-eks-kube-docker-cli
         uses: docker/build-push-action@v2
         with:
-          context:  aws-eks-kube-docker-cli
+          context:  ./aws-eks-kube-docker-cli
           tags:     integrational/aws-eks-kube-docker-cli
           no-cache: true
           pull:     true
@@ -30,7 +30,7 @@ jobs:
       - name: eks-client
         uses: docker/build-push-action@v2
         with:
-          context:  eks-client
+          context:  ./eks-client
           tags:     integrational/eks-client
           no-cache: true
           pull:     true
