--- a/.github/workflows/build-tag-push-to-dockerhub.yml
+++ b/.github/workflows/build-tag-push-to-dockerhub.yml
@@ -14,6 +14,8 @@ jobs:
   build-tag-push:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to Docker Hub
         uses: docker/login-action@v1 
         with:
@@ -22,7 +24,7 @@ jobs:
       - name: aws-eks-kube-docker-cli
         uses: docker/build-push-action@v2
         with:
-          context:  ./aws-eks-kube-docker-cli
+          file:     aws-eks-kube-docker-cli/Dockerfile
           tags:     integrational/aws-eks-kube-docker-cli
           no-cache: true
           pull:     true
@@ -30,7 +32,7 @@ jobs:
       - name: eks-client
         uses: docker/build-push-action@v2
         with:
-          context:  ./eks-client
+          file:     eks-client/Dockerfile
           tags:     integrational/eks-client
           no-cache: true
           pull:     true
