--- a/.github/workflows/build-tag-push-to-dockerhub.yml
+++ b/.github/workflows/build-tag-push-to-dockerhub.yml
@@ -14,6 +14,10 @@ jobs:
   build-tag-push:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker Hub
@@ -24,8 +28,7 @@ jobs:
       - name: aws-eks-kube-docker-cli
         uses: docker/build-push-action@v2
         with:
-          context:  ./aws-eks-kube-docker-cli
-          file:     aws-eks-kube-docker-cli/Dockerfile
+          context:  aws-eks-kube-docker-cli
           tags:     integrational/aws-eks-kube-docker-cli
           no-cache: true
           pull:     true
@@ -33,8 +36,7 @@ jobs:
       - name: eks-client
         uses: docker/build-push-action@v2
         with:
-          context:  ./eks-client
-          file:     eks-client/Dockerfile
+          context:  eks-client
           tags:     integrational/eks-client
           no-cache: true
           pull:     true
