--- a/.github/workflows/build-tag-push-to-dockerhub.yml
+++ b/.github/workflows/build-tag-push-to-dockerhub.yml
@@ -25,6 +25,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN    }}
+      - name: asciidoctor
+        uses: docker/build-push-action@v2
+        with:
+          context:  asciidoctor
+          tags:     integrational/asciidoctor
+          no-cache: true
+          pull:     true
+          push:     true
       - name: aws-eks-kube-docker-cli
         uses: docker/build-push-action@v2
         with:
