--- a/bat-cli/Dockerfile
+++ b/bat-cli/Dockerfile
@@ -1,6 +1,11 @@
 FROM openjdk:8-jre-slim
+MAINTAINER gerald@integrational.eu
 
-RUN apt update && apt upgrade -y && apt install curl unzip -y
+RUN apt-get update                             \
+ && apt-get upgrade -y                         \
+ && apt-get install -y --no-install-recommends \
+            curl unzip                         \
+ && apt-get clean
 
 RUN curl -o- 'https://s3.amazonaws.com/bat-wrapper/install.sh' | bash
 
