using latest Asciidoctor base image again

--- a/asciidoctor/Dockerfile
+++ b/asciidoctor/Dockerfile
@@ -1,6 +1,4 @@
-FROM asciidoctor/docker-asciidoctor:1.16
-# currently fails:
-#FROM asciidoctor/docker-asciidoctor:latest
+FROM asciidoctor/docker-asciidoctor:latest
 MAINTAINER gerald@integrational.eu
 
 #
