--- a/aws-eks-kube-docker-cli/Dockerfile
+++ b/aws-eks-kube-docker-cli/Dockerfile
@@ -14,31 +14,22 @@ RUN apt-get update                             \
             curl unzip groff ca-certificates apt-transport-https gnupg-agent software-properties-common less jq \
  && apt-get clean
 
-# Either: Install latest version of AWS CLI version 1
-RUN apt-get install -y python3 python3-pip \
- && pip3 install awscli --upgrade --system
-
-# Or: Install latest version of AWS CLI version 2
-#RUN curl --silent "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o awscliv2.zip \
-# && unzip -q awscliv2.zip                                                                             \
-# && ./aws/install
+# Install latest version of AWS CLI version 2
+RUN curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o awscliv2.zip \
+ && unzip -q awscliv2.zip                                                                    \
+ && ./aws/install
 
 # Install latest version of eksctl
 RUN curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C . \
  && mv ./eksctl /usr/local/bin/
 
-# Either: Install latest version of kubectl
-RUN curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -                                 \
+# Install latest version of kubectl
+RUN curl --silent https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -                                 \
  && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
  && apt-get update && apt-get install -y kubectl
 
-# Or: Install a specific version of kubectl
-#RUN curl --silent https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl -o kubectl \
-# && chmod +x ./kubectl                                                                                               \
-# && mv ./kubectl /usr/local/bin/
-
 # Install a specific version of aws-iam-authenticator
-RUN curl --silent https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator -o aws-iam-authenticator \
+RUN curl --silent https://s3.us-west-2.amazonaws.com/amazon-eks/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator -o aws-iam-authenticator \
  && chmod +x ./aws-iam-authenticator                                                                                                             \
  && mv ./aws-iam-authenticator /usr/local/bin/
 
